--- a/src/components/common/Button.css
+++ b/src/components/common/Button.css
@@ -34,7 +34,25 @@
   background-color: #db4444;
   color: #fafafa;
 }
-
+.lovable-btn--outlite {
+  background-color: #fff;
+  border: 1px solid rgba(0, 0, 0, 0.4);
+  color: #000;
+  font-family: Poppins;
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 16px
+}
+.lovable-btn--outlite:hover {
+  background-color: rgba(204, 204, 204, 0.2);
+  border: 1px solid rgba(0, 0, 0, 0.4);
+}
 /* 🔹 Responsive */
 @media (max-width: 768px) {
   .lovable-btn {
